--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -9,9 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-java@v2
+      - uses: actions/setup-java@v3
         with:
-          distribution: 'correto'
+          distribution: 'corretto'
           java-version: 17
       - uses: axel-op/googlejavaformat-action@v3
         with:
